# personalDevBlog

./: pyproject.toml
accounts/migrations/: 0001_initial.py
dev_blog/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_rendered_content_alter_post_slug.py  0003_alter_post_rendered_content_alter_post_slug.py
templates/: base.html  post_detail_view.html  post_list_view.html
templates/layout/: navbar.html
