[tool.poetry]
name = "dev-blog"
version = "0.1.0"
description = ""
authors = ["Travis Aucoin <travisdevaucoin@gmail.com>"]
readme = "README.md"
packages = [{include = "dev_blog"}]

[tool.poetry.dependencies]
python = "^3.10.9"
django = "^4.1.5"
mistune = "^2.0.4"
pygments = "^2.14.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

